--- a/templates/layout/_sidebar.html
+++ b/templates/layout/_sidebar.html
@@ -61,8 +61,7 @@
             <div class="logo-small visible-xs"><img src="/static/img/logo/logo_ghiro77x35.png"></div>
             <ul class="nav nav-pills hidden-xs">
                 <li class="active"><a href="/"><span class="fa fa-dashboard"></span>Dashboard</a></li>
-                <li><a href="#"><span class="icon icon-barcode"></span>Labels <span class="label label-primary">1,078</span></a></li>
-                <li><a href="#"><span class="icon icon-cog"></span>Admin</a></li>
+                <li><a href="{% url "analyses.views.list_cases" %}"><span class="fa fa-briefcase"></span>Open cases <span class="label label-primary">{{ open_cases_count }}</span></a></li>
             </ul>
             <div class="hov">
                 <div class="btn-group">
@@ -122,7 +121,7 @@
                     </ul>
                 </div>
                 <div class="btn-group">
-                    <a class="con" href="" data-toggle="dropdown"><span class="icon icon-user"></span><span class="label label-primary">+5</span></a>
+                    <a class="con" href="" data-toggle="dropdown"><i class="icon icon-user"></i></a>
                     <ul class="dropdown-menu pull-right dropdown-profile" role="menu">
                         <li class="title"><span class="icon icon-user"></span>&nbsp;&nbsp;Welcome, {{ request.user.username }}!</li>
                         <li><a href="{% url "users.views.profile" %}"><span class="fa fa-user"></span>Profile</a></li>
