Renamed manage app to system (to help tab completion when using manage.py)

--- a/templates/admin/dependencies.html
+++ b/templates/admin/dependencies.html
@@ -29,7 +29,7 @@
                         <a href="{% url "users.views.admin_list_activity" %}">Activity</a>
                     </li>
                     <li class="active">
-                        <a href="{% url "manage.views.dependencies_list" %}">Requirements</a>
+                        <a href="{% url "system.views.dependencies_list" %}">Requirements</a>
                     </li>
                 </ul>
                 <div class="tab-content">
