--- a/templates/analyses/images/new_image.html
+++ b/templates/analyses/images/new_image.html
@@ -27,7 +27,13 @@
 
     <div class="content">
         <div class="page-h1">
-            <h1>Upload photo</h1>
+            <h1>Upload photo<small> in
+                <span style="color: salmon">{% if case.name|length > 70 %}
+                    {{ case.name|slice:":70" }} ...
+                {% else %}
+                    {{ case.name }}
+                {% endif %}</span> case</small>
+            </h1>
         </div>
         <div class="col-md-12">
             <div class="wdgt">
