--- a/templates/analyses/images/new_url.html
+++ b/templates/analyses/images/new_url.html
@@ -27,12 +27,12 @@
 
     <div class="content">
         <div class="page-h1">
-            <h1>New image in
+            <h1>New image <small>in
                 <span style="color: salmon">{% if case.name|length > 70 %}
                     {{ case.name|slice:":70" }} ...
                 {% else %}
                     {{ case.name }}
-                {% endif %}</span> case
+                {% endif %}</span> case</small>
             </h1>
         </div>
         <div class="col-md-12">
