Modified search results and search form page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -184,7 +184,11 @@ border-top-left-radius: 0;
 
 /* FORM CUSTOM */
 #id_users {
-    width: 310px
+    width: 310px;
+}
+
+.width-form-search{
+    width: 400px !important;
 }
 
 /* PAGE HEADER */
