--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -48,14 +48,14 @@
                                                 {% if user.is_active %}
                                                     <i class="fa fa-check-circle-o fa-lg text-success"> </i>
                                                 {% else %}
-                                                    <i class="fa fa-remove fa-lg text-error"> </i>
+                                                    <i class="fa fa-remove fa-lg text-danger"> </i>
                                                 {% endif %}
                                             </td>
                                             <td>
                                                 {% if user.is_superuser %}
                                                     <i class="fa fa-check-circle-o fa-lg text-success"> </i>
                                                 {% else %}
-                                                    <i class="fa fa-remove fa-lg text-error"> </i>
+                                                    <i class="fa fa-remove fa-lg text-danger"> </i>
                                                 {% endif %}
                                             </td>
                                             <td>
