--- a/templates/layout/_searchForm.html
+++ b/templates/layout/_searchForm.html
@@ -92,33 +92,32 @@
                    <label class="radio">
                         <input type="radio" name="optionsRadios" id="or" value="or">
                         OR
-                    </label>
+                   </label>
                 </div>
             </div>
             <div class="form-actions">
-                <button id="btn_submit" type="submit" class="btn btn-large btn-success">
+                <button id="btn_submit" type="submit" class="btn btn-success">
                     Search
                 </button>
             </div>
         </form>
         <form id="location" action="{% url "analyses.views.search" "list" %}" method="get" class="form-horizontal form-model tab-pane">{% csrf_token %}
-            <div class="control-group">
-                <label class="control-label" for="metadata">Location</label>
-                <div class="controls">
-                    <input id="lat" type="text" name="lat" placeholder="LATITUDE" class="height-large input-small-three">
-                    <input id="long" type="text" name="long" placeholder="LONGITUDE" class="height-large input-small-three">
-                    <input id="dist" type="text" name="dist" placeholder="MAX DISTANCE" class="height-large input-small-three">
+            <div class="control-group box">
+                <a href="#" data-trigger="hover" class="pop" data-toggle="popover" title="Search by location" data-content="Search for photos near this point.">
+                    Location
+                </a>
+                <div class="control-group form-inline">
+                    <input id="lat" type="text" name="lat" placeholder="LATITUDE" class="form-control">
+                    <input id="long" type="text" name="long" placeholder="LONGITUDE" class="form-control">
+                    <input id="dist" type="text" name="dist" placeholder="MAX DISTANCE" class="form-control">
                     {# Detects if the search form is called inside a case or not. (Search scope) #}
                     {% if in_case_id %}
                         <input type="hidden" value="{{ case.id }}" name="in_case" id="in_case">
                     {% endif %}
-                    <a href="#" data-trigger="hover" class="pop" data-toggle="popover" title="Search by location" data-content="Search for photos near this point.">
-                        <span class="badge badge-info"><i class="icon-info"></i></span>
-                    </a>
                 </div>
             </div>
             <div class="form-actions">
-                <button id="btn_submit" type="submit" class="btn btn-large btn-success">
+                <button id="btn_submit" type="submit" class="btn btn-success">
                     Search
                 </button>
             </div>
