--- a/static/css/style.css
+++ b/static/css/style.css
@@ -191,6 +191,11 @@ border-top-left-radius: 0;
     width: 400px !important;
 }
 
+/* ALERT & NITIFICATION CUSTOM */
+#filelist{
+    margin-left: 10px;
+}
+
 /* PAGE HEADER */
 .page-h1 h1 { font-size:24px; font-weight:200; color:#448FBA; margin: 5px 15px; border-bottom:1px solid #E6E6E6; padding-bottom:10px; }
 
