Layout dashboard modified

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -191,6 +191,28 @@ border-top-left-radius: 0;
     width: 400px !important;
 }
 
+#id_name, #id_description{
+    background-color: #ffffff;
+    background-image: none;
+    border: 1px solid #cccccc;
+    border-radius: 0 !important;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    color: #555555;
+    display: block;
+    font-size: 14px;
+    height: 34px;
+    line-height: 1.42857;
+    padding: 6px 12px;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+    vertical-align: middle;
+}
+#id_name:focus,#id_description:focus {
+    border: 1px solid #66afe9;
+    border-color: #66afe9;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);
+    outline: 0 none;
+}
+
 /* ALERT & NITIFICATION CUSTOM */
 #filelist{
     margin-left: 10px;
