--- a/templates/analyses/report/_dashboardAnalysisResult.html
+++ b/templates/analyses/report/_dashboardAnalysisResult.html
@@ -12,31 +12,31 @@
         </tr>
         <tr>
             <td>EXIF metadata extraction</td>
-            <td> {% if analysis.report.metadata.Exif %} <span class="label label-success">EXIF Metadata</span> {% else %} <span class="label label-inverse">No EXIF metadata</span> {% endif %} </td>
+            <td> {% if analysis.report.metadata.Exif %} <span class="label label-success">EXIF Metadata</span> {% else %} <span class="label label-dark">No EXIF metadata</span> {% endif %} </td>
         </tr>
         <tr>
             <td>IPTC metadata extraction</td>
-            <td> {% if analysis.report.metadata.Iptc %} <span class="label label-success">IPTC Metadata</span> {% else %} <span class="label label-inverse">No IPTC metadata</span> {% endif %} </td>
+            <td> {% if analysis.report.metadata.Iptc %} <span class="label label-success">IPTC Metadata</span> {% else %} <span class="label label-dark">No IPTC metadata</span> {% endif %} </td>
         </tr>
         <tr>
             <td>XMP metadata extraction</td>
-            <td> {% if analysis.report.metadata.Xmp %} <span class="label label-success">XMP Metadata</span> {% else %} <span class="label label-inverse">No XMP metadata</span> {% endif %} </td>
+            <td> {% if analysis.report.metadata.Xmp %} <span class="label label-success">XMP Metadata</span> {% else %} <span class="label label-dark">No XMP metadata</span> {% endif %} </td>
         </tr>
         <tr>
             <td>Preview extraction from metadata</td>
-            <td> {% if analysis.report.metadata.preview and analysis.report.metadata.preview|length > 0  %} <span class="label label-success">Preview found</span> {% else %} <span class="label label-inverse">No Preview</span> {% endif %} </td>
+            <td> {% if analysis.report.metadata.preview and analysis.report.metadata.preview|length > 0  %} <span class="label label-success">Preview found</span> {% else %} <span class="label label-dark">No Preview</span> {% endif %} </td>
         </tr>
         <tr>
             <td>Localization</td>
-            <td> {% if analysis.report.metadata.gps.pos %} <span class="label label-success">GPS position</span> {% else %} <span class="label label-inverse">No GPS data</span> {% endif %} </td>
+            <td> {% if analysis.report.metadata.gps.pos %} <span class="label label-success">GPS position</span> {% else %} <span class="label label-dark">No GPS data</span> {% endif %} </td>
         </tr>
         <tr>
             <td>Error Level Analysis (ELA)</td>
-            <td> {% if analysis.report.ela  %} <span class="label label-success">Applicable</span> {% else %} <span class="label label-inverse">Not applicable</span> {% endif %} </td>
+            <td> {% if analysis.report.ela  %} <span class="label label-success">Applicable</span> {% else %} <span class="label label-dark">Not applicable</span> {% endif %} </td>
         </tr>
         <tr>
             <td>Signature check</td>
-            <td> {% if analysis.report.signatures and analysis.report.signatures|length > 0  %} <span class="label label-success">Signature matches</span> {% else %} <span class="label label-inverse">No signature match</span> {% endif %} </td>
+            <td> {% if analysis.report.signatures and analysis.report.signatures|length > 0  %} <span class="label label-success">Signature matches</span> {% else %} <span class="label label-dark">No signature match</span> {% endif %} </td>
         </tr>
     </tbody>
 </table>
