--- a/templates/analyses/report/_dashboard.html
+++ b/templates/analyses/report/_dashboard.html
@@ -15,7 +15,7 @@
             </li>
         </ul>
     </div>
-    <div class="box-body">
+    <div class="box">
         <div class="tab-content">
             <div class="tab-pane fade in active" id="system-stat">
                 <div class="row-fluid">
@@ -40,15 +40,15 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td><span class="badge badge-success">Low</span></td>
+                                            <td><span class="label label-success label-round">Low</span></td>
                                             <td class="text-success right"><b>{{ analysis.report.signatures|count_severity:"1" }}</b></td>
                                         </tr>
                                         <tr>
-                                            <td><span class="badge badge-warning">Medium</span></td>
+                                            <td><span class="label label-warning label-round">Medium</span></td>
                                             <td class="text-warning right"><b>{{ analysis.report.signatures|count_severity:"2" }}</b></td>
                                         </tr>
                                         <tr>
-                                            <td><span class="badge badge-important">High</span></td>
+                                            <td><span class="label label-danger label-round">High</span></td>
                                             <td class="text-error right"><b>{{ analysis.report.signatures|count_severity:"3" }}</b></td>
                                         </tr>
                                     </tbody>
